fix(workspace): D21-B v8 — proper runId mapping test with red/green proof
- Extract deleteEvictionCandidate(Path) as package-private seam for
  deterministic delete failure injection (test-only seam, production
  still calls Files.delete).
- Add dlqMemoryContains(String) package-private query for assertions.
- Rewrite eviction_doesNotRemoveWrongRunIdWhenDeleteFails with real
  assertions:
  * File 0: valid JSON, missing runId (quarantine blocked so file stays,
    delete succeeds, evictedRunIds has no entry for it).
  * File 1: valid JSON, runId="run-b", delete FAILS via seam.
  * Assert: runBFile exists, run-b still in dlqMemory.
  * Red proof: against old parallel-list index code → test FAILS
    (run-b wrongly removed). Green proof: with EvictionCandidate →
    test PASSES (run-b correctly retained).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>